--- a/src/main/resources/docgen/templates/msmarco-doc-segmented.template
+++ b/src/main/resources/docgen/templates/msmarco-doc-segmented.template
@@ -69,14 +69,14 @@ To generate an MS MARCO submission with the BM25 default parameters, correspondi
 ```bash
 $ target/appassembler/bin/SearchCollection -topicreader TsvString \
    -topics src/main/resources/topics-and-qrels/topics.msmarco-doc.dev.txt \
-   -index indexes/lucene-index.msmarco-doc-per-passage.pos+docvectors+raw \
-   -output runs/run.msmarco-doc-per-passage.bm25-default.txt -format msmarco \
+   -index indexes/lucene-index.msmarco-doc-segmented/ \
+   -output runs/run.msmarco-doc-segmented.bm25-default.txt -format msmarco \
    -bm25 -bm25.k1 0.9 -bm25.b 0.4 -hits 1000 \
    -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
 
 $ python tools/scripts/msmarco/msmarco_doc_eval.py \
    --judgments src/main/resources/topics-and-qrels/qrels.msmarco-doc.dev.txt \
-   --run runs/run.msmarco-doc-per-passage.bm25-default.txt
+   --run runs/run.msmarco-doc-segmented.bm25-default.txt
 
 #####################
 MRR @100: 0.2682349308946578
@@ -92,14 +92,14 @@ To generate an MS MARCO submission with the BM25 tuned parameters, corresponding
 ```bash
 $ target/appassembler/bin/SearchCollection -topicreader TsvString \
    -topics src/main/resources/topics-and-qrels/topics.msmarco-doc.dev.txt \
-   -index indexes/lucene-index.msmarco-doc-per-passage.pos+docvectors+raw \
-   -output runs/run.msmarco-doc-per-passage.bm25-tuned.txt -format msmarco \
+   -index indexes/lucene-index.msmarco-doc-segmented/ \
+   -output runs/run.msmarco-doc-segmented.bm25-tuned.txt -format msmarco \
    -bm25 -bm25.k1 2.16 -bm25.b 0.61 -hits 1000 \
    -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
 
 $ python tools/scripts/msmarco/msmarco_doc_eval.py \
    --judgments src/main/resources/topics-and-qrels/qrels.msmarco-doc.dev.txt \
-   --run runs/run.msmarco-doc-per-passage.bm25-tuned.txt
+   --run runs/run.msmarco-doc-segmented.bm25-tuned.txt
 
 #####################
 MRR @100: 0.2751202109946902
@@ -109,3 +109,32 @@ QueriesRanked: 5193
 
 This run corresponds to the MS MARCO document ranking leaderboard entry "Anserini's BM25 (per passage), parameters tuned for recall@100 (k1=2.16, b=0.61)" dated 2021/01/20, and is reported in the Lin et al. (SIGIR 2021) Pyserini paper.
 Again, note that the above command uses `-format msmarco` to directly generate a run in the MS MARCO output format.
+
+As of February 2022, following resolution of [#1721](https://github.com/castorini/anserini/issues/1721), BM25 runs for the MS MARCO leaderboard can be generated with the same commands as above.
+However, the effectiveness has changed slightly, since we corrected underlying issues with data preparation.
+
+For default parameters (`k1=0.9`, `b=0.4`):
+
+```
+$ python tools/scripts/msmarco/msmarco_doc_eval.py \
+   --judgments src/main/resources/topics-and-qrels/qrels.msmarco-doc.dev.txt \
+   --run runs/run.msmarco-doc-segmented.bm25-default.txt
+
+#####################
+MRR @100: 0.26851990908986706
+QueriesRanked: 5193
+#####################
+```
+
+For tuned parameters (`k1=2.16`, `b=0.61`):
+
+```
+$ python tools/scripts/msmarco/msmarco_doc_eval.py \
+   --judgments src/main/resources/topics-and-qrels/qrels.msmarco-doc.dev.txt \
+   --run runs/run.msmarco-doc-segmented.bm25-tuned.txt
+
+#####################
+MRR @100: 0.27551963417683756
+QueriesRanked: 5193
+#####################
+```
