--- a/src/main/resources/docgen/templates/dl20-doc-docTTTTTquery.template
+++ b/src/main/resources/docgen/templates/dl20-doc-docTTTTTquery.template
@@ -70,3 +70,5 @@ Some of these regressions correspond to official TREC 2020 Deep Learning Track s
 
 + `d_d2q_bm25` = BM25 (default), `k1=0.9`, `b=0.4`
 + `d_d2q_bm25rm3` = BM25 (default) + RM3, `k1=0.9`, `b=0.4`
+
+Note that [#1721](https://github.com/castorini/anserini/issues/1721) slightly change the results, since we corrected underlying issues with data preparation.
