--- a/src/main/resources/regression/dl21-doc-segmented-unicoil-0shot.yaml
+++ b/src/main/resources/regression/dl21-doc-segmented-unicoil-0shot.yaml
@@ -1,49 +1,49 @@
 ---
-corpus: msmarco-v2-passage-unicoil-noexp-0shot
-corpus_path: collections/msmarco/msmarco_v2_passage_unicoil_noexp_0shot/
+corpus: msmarco-v2-doc-segmented-unicoil-0shot
+corpus_path: collections/msmarco/msmarco_v2_doc_segmented_unicoil_0shot/
 
-index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-noexp-0shot/
+index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-0shot/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
 index_options: -impact -pretokenized
 index_stats:
-  documents: 138364198
-  documents (non-empty): 138364198
-  total terms: 411330032512
+  documents: 124131414
+  documents (non-empty): 124131414
+  total terms: 1185840285417
 
 metrics:
   - metric: MAP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m map -l 2
+    params: -c -M 100 -m map
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: false
+    can_combine: no
   - metric: MRR@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m recip_rank -l 2
+    params: -c -M 100 -m recip_rank
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: false
+    can_combine: true
   - metric: nDCG@10
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m ndcg_cut.10
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: false
+    can_combine: true
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.100 -l 2
+    params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.1000 -l 2
+    params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -53,23 +53,23 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[DL21 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
+  - name: "[DL21 (Doc)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
     id: dl21
-    path: topics.dl21.unicoil-noexp.0shot.tsv.gz
-    qrel: qrels.dl21-passage.txt
+    path: topics.dl21.unicoil.0shot.tsv.gz
+    qrel: qrels.dl21-doc.txt
 
 models:
-  - name: unicoil-noexp-0shot
-    display: uniCOIL (no expansion, zero-shot)
-    params: -impact -pretokenized
+  - name: unicoil-0shot
+    display: uniCOIL (zero-shot)
+    params: -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000 -impact -pretokenized
     results:
       MAP@100:
-        - 0.2193
+        - 0.2652
       MRR@100:
-        - 0.6991
+        - 0.9576
       nDCG@10:
-        - 0.5756
+        - 0.6392
       R@100:
-        - 0.4246
+        - 0.3664
       R@1000:
-        - 0.6897
+        - 0.7053
