--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: msmarco-v2-doc-segmented-unicoil-noexp-0shot
-corpus_path: collections/msmarco/msmarco_v2_doc_segmented_unicoil_noexp_0shot/
+corpus: msmarco-v2-doc-segmented-unicoil-0shot
+corpus_path: collections/msmarco/msmarco_v2_doc_segmented_unicoil_0shot/
 
-index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-noexp-0shot/
+index_path: indexes/lucene-index.msmarco-v2-doc-segmented-unicoil-0shot/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
 index_options: -impact -pretokenized
 index_stats:
-  documents: 124131404
-  documents (non-empty): 124131404
-  total terms: 805830282591
+  documents: 124131414
+  documents (non-empty): 124131414
+  total terms: 1185840285417
 
 metrics:
   - metric: MAP@100
@@ -48,27 +48,27 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[MS MARCO V2 Doc: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
     id: dev
-    path: topics.msmarco-v2-doc.dev.unicoil-noexp.0shot.tsv.gz
+    path: topics.msmarco-v2-doc.dev.unicoil.0shot.tsv.gz
     qrel: qrels.msmarco-v2-doc.dev.txt
   - name: "[MS MARCO V2 Doc: Dev2](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
     id: dev2
-    path: topics.msmarco-v2-doc.dev2.unicoil-noexp.0shot.tsv.gz
+    path: topics.msmarco-v2-doc.dev2.unicoil.0shot.tsv.gz
     qrel: qrels.msmarco-v2-doc.dev2.txt
 
 models:
-  - name: unicoil-noexp-0shot
-    display: uniCOIL (no expansion, zero-shot)
+  - name: unicoil-0shot
+    display: uniCOIL (zero-shot)
     params: -impact -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
-        - 0.2050
-        - 0.2082
+        - 0.2218
+        - 0.2270
       MRR@100:
-        - 0.2069
-        - 0.2098
+        - 0.2243
+        - 0.2291
       R@100:
-        - 0.7198
-        - 0.7266
+        - 0.7551
+        - 0.7550
       R@1000:
-        - 0.8854
-        - 0.8899
+        - 0.9056
+        - 0.9097
