--- a/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-unicoil-0shot.yaml
@@ -1,8 +1,8 @@
 ---
-corpus: msmarco-v2-passage-unicoil-noexp-0shot
-corpus_path: collections/msmarco/msmarco_v2_passage_unicoil_noexp_0shot/
+corpus: msmarco-v2-passage-unicoil-0shot
+corpus_path: collections/msmarco/msmarco_v2_passage_unicoil_0shot/
 
-index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-noexp-0shot/
+index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-0shot/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 18
@@ -10,40 +10,33 @@ index_options: -impact -pretokenized
 index_stats:
   documents: 138364198
   documents (non-empty): 138364198
-  total terms: 411330032512
+  total terms: 775253560148
 
 metrics:
   - metric: MAP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m map -l 2
+    params: -c -M 100 -m map
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: false
+    can_combine: true
   - metric: MRR@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -M 100 -m recip_rank -l 2
+    params: -c -M 100 -m recip_rank
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: false
-  - metric: nDCG@10
-    command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m ndcg_cut.10
-    separator: "\t"
-    parse_index: 2
-    metric_precision: 4
-    can_combine: false
+    can_combine: true
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.100 -l 2
+    params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric_precision: 4
     can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.1000 -l 2
+    params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -53,23 +46,29 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[DL21 (Passage)](https://microsoft.github.io/msmarco/TREC-Deep-Learning)"
-    id: dl21
-    path: topics.dl21.unicoil-noexp.0shot.tsv.gz
-    qrel: qrels.dl21-passage.txt
+  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    id: dev
+    path: topics.msmarco-v2-passage.dev.unicoil.0shot.tsv.gz
+    qrel: qrels.msmarco-v2-passage.dev.txt
+  - name: "[MS MARCO V2 Passage: Dev2](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+    id: dev2
+    path: topics.msmarco-v2-passage.dev2.unicoil.0shot.tsv.gz
+    qrel: qrels.msmarco-v2-passage.dev2.txt
 
 models:
-  - name: unicoil-noexp-0shot
-    display: uniCOIL (no expansion, zero-shot)
+  - name: unicoil-0shot
+    display: uniCOIL (zero-shot)
     params: -impact -pretokenized
     results:
       MAP@100:
-        - 0.2193
+        - 0.1485
+        - 0.1561
       MRR@100:
-        - 0.6991
-      nDCG@10:
-        - 0.5756
+        - 0.1499
+        - 0.1577
       R@100:
-        - 0.4246
+        - 0.5518
+        - 0.5661
       R@1000:
-        - 0.6897
+        - 0.7616
+        - 0.7671
