--- a/src/main/resources/regression/msmarco-v2-passage-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-passage-unicoil-noexp-0shot.yaml
@@ -1,6 +1,6 @@
 ---
 corpus: msmarco-v2-passage-unicoil-noexp-0shot
-corpus_path: collections/msmarco/msmarco-passage-v2-unicoil-noexp-0shot-b8/
+corpus_path: collections/msmarco/msmarco_v2_passage_unicoil_noexp_0shot/
 
 index_path: indexes/lucene-index.msmarco-v2-passage-unicoil-noexp-0shot/
 collection_class: JsonVectorCollection
@@ -50,7 +50,7 @@ topics:
     id: dev
     path: topics.msmarco-v2-passage.dev.unicoil-noexp.0shot.tsv.gz
     qrel: qrels.msmarco-v2-passage.dev.txt
-  - name: "[MS MARCO V2 Passage: Dev](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
+  - name: "[MS MARCO V2 Passage: Dev2](https://microsoft.github.io/msmarco/TREC-Deep-Learning.html)"
     id: dev2
     path: topics.msmarco-v2-passage.dev2.unicoil-noexp.0shot.tsv.gz
     qrel: qrels.msmarco-v2-passage.dev2.txt
