--- a/src/main/resources/regression/msmarco-doc-segmented-unicoil.yaml
+++ b/src/main/resources/regression/msmarco-doc-segmented-unicoil.yaml
@@ -1,16 +1,16 @@
 ---
-corpus: msmarco-passage-unicoil
-corpus_path: collections/msmarco/msmarco-passage-unicoil/
+corpus: msmarco-doc-segmented-unicoil
+corpus_path: collections/msmarco/msmarco-doc-segmented-unicoil/
 
-index_path: indexes/lucene-index.msmarco-passage-unicoil/
+index_path: indexes/lucene-index.msmarco-doc-segmented-unicoil/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
 index_options: -impact -pretokenized
 index_stats:
-  documents: 8841823
-  documents (non-empty): 8841823
-  total terms: 44495093768
+  documents: 20545677
+  documents (non-empty): 20545677
+  total terms: 214505277898
 
 metrics:
   - metric: MAP
@@ -20,9 +20,9 @@ metrics:
     parse_index: 2
     metric_precision: 4
     can_combine: true
-  - metric: MRR
+  - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recip_rank
+    params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric_precision: 4
@@ -39,20 +39,20 @@ topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
+  - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
     id: dev
-    path: topics.msmarco-passage.dev-subset.unicoil.tsv.gz
-    qrel: qrels.msmarco-passage.dev-subset.txt
+    path: topics.msmarco-doc.dev.unicoil.tsv.gz
+    qrel: qrels.msmarco-doc.dev.txt
 
 models:
   - name: unicoil
     display: uniCOIL w/ doc2query-T5 expansion
-    params: -impact -pretokenized
+    params: -impact -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP:
-        - 0.3574
-      MRR:
-        - 0.3625
+        - 0.3535
+      R@100:
+        - 0.8858
       R@1000:
-        - 0.9582
+        - 0.9546
 
