--- a/src/main/resources/docgen/templates/dl20-doc-segmented-unicoil.template
+++ b/src/main/resources/docgen/templates/dl20-doc-segmented-unicoil.template
@@ -5,7 +5,7 @@ These runs use the uniCOIL model described in the following paper:
 
 > Jimmy Lin and Xueguang Ma. [A Few Brief Notes on DeepImpact, COIL, and a Conceptual Framework for Information Retrieval Techniques.](https://arxiv.org/abs/2106.14807) _arXiv:2106.14807_.
 
-The paper does not actually report on the experiments here; these were created after the paper was posted on arXiv.
+The experiments on this page are not actually reported in the paper.
 However, the model is the same, applied to the MS MARCO _segmented_ document corpus (with doc2query-T5 expansions).
 Retrieval uses MaxP technique, where we select the score of the highest-scoring passage from a document as the score for that document to produce a document ranking.
 
@@ -21,7 +21,6 @@ ${index_cmds}
 ```
 
 The directory `/path/to/msmarco-doc-segmented-unicoil/` should be a directory containing the compressed `jsonl` files that comprise the corpus.
-See [this page](experiments-msmarco-unicoil.md) for additional details.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
