--- a/src/main/resources/regression/dl19-passage-unicoil.yaml
+++ b/src/main/resources/regression/dl19-passage-unicoil.yaml
@@ -15,34 +15,34 @@ index_stats:
 metrics:
   - metric: MAP
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -m map -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
-  - metric: MRR
-    command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recip_rank
-    separator: "\t"
-    parse_index: 2
-    metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.1000
+    params: -m recall.1000 -c -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: nDCG@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -m ndcg_cut.10 -c
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
-    id: dev
-    path: topics.msmarco-passage.dev-subset.unicoil.tsv.gz
-    qrel: qrels.msmarco-passage.dev-subset.txt
+  - name: "[DL19 (Passage)](https://trec.nist.gov/data/deep2019.html)"
+    id: dl19
+    path: topics.dl19-passage.unicoil.0shot.tsv.gz
+    qrel: qrels.dl19-passage.txt
 
 models:
   - name: unicoil
@@ -50,9 +50,8 @@ models:
     params: -impact -pretokenized
     results:
       MAP:
-        - 0.3574
-      MRR:
-        - 0.3625
+        - 0.4612
+      nDCG@10:
+        - 0.7024
       R@1000:
-        - 0.9582
-
+        - 0.8292
