--- a/src/main/resources/regression/dl20-passage-unicoil.yaml
+++ b/src/main/resources/regression/dl20-passage-unicoil.yaml
@@ -15,34 +15,48 @@ index_stats:
 metrics:
   - metric: MAP
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -c -m map -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: nDCG@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m ndcg_cut.10
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
   - metric: MRR
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recip_rank
+    params: -c -m recip_rank -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: R@100
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m recall.100 -l 2
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m recall.1000
+    params: -c -m recall.1000 -l 2
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
-    id: dev
-    path: topics.msmarco-passage.dev-subset.unicoil.tsv.gz
-    qrel: qrels.msmarco-passage.dev-subset.txt
+  - name: "[DL20 (Passage)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl20
+    path: topics.dl20.unicoil.0shot.tsv.gz
+    qrel: qrels.dl20-passage.txt
 
 models:
   - name: unicoil
@@ -50,9 +64,12 @@ models:
     params: -impact -pretokenized
     results:
       MAP:
-        - 0.3574
+        - 0.4430
+      nDCG@10:
+        - 0.6745
       MRR:
-        - 0.3625
+        - 0.8235
+      R@100:
+        - 0.7006
       R@1000:
-        - 0.9582
-
+        - 0.8430
