Refactor uniCOIL for MS MARCO V1 documentation (#1759)
Reduce duplication of documentation - we have both a "reproduction guide" (docs/experiments-msmarco-unicoil.md)
and "regression experiments". The latter is more complete and better tested. With the latter, we don't really need the
former. This saves us from having to keep multiple copies of the document up to date.

--- a/src/main/resources/docgen/templates/dl19-doc-segmented-unicoil.template
+++ b/src/main/resources/docgen/templates/dl19-doc-segmented-unicoil.template
@@ -10,17 +10,36 @@ However, the model is the same, applied to the MS MARCO _segmented_ document cor
 Retrieval uses MaxP technique, where we select the score of the highest-scoring passage from a document as the score for that document to produce a document ranking.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
-Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
+Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead and then run `bin/build.sh` to rebuild the documentation.
+
+## Corpus
+
+We make available a version of the MS MARCO passage corpus that has already been processed with uniCOIL, i.e., gone through document expansion and term reweighting.
+Thus, no neural inference is involved.
+For details on how to train uniCOIL and perform inference, please see [this guide](https://github.com/luyug/COIL/tree/main/uniCOIL).
+
+Download the corpus and unpack into `collections/`:
+
+```
+wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco-doc-segmented-unicoil.tar -P collections/
+
+tar xvf collections/msmarco-doc-segmented-unicoil.tar -C collections/
+```
+
+To confirm, `msmarco-doc-segmented-unicoil.tar` is 18 GB and has MD5 checksum `6a00e2c0c375cb1e52c83ae5ac377ebb`.
 
 ## Indexing
 
-Typical indexing command:
+Sample indexing command:
 
 ```
 ${index_cmds}
 ```
 
-The directory `/path/to/msmarco-doc-segmented-unicoil/` should be a directory containing the compressed `jsonl` files that comprise the corpus.
+The directory `/path/to/msmarco-doc-segmented-unicoil/` should point to the corpus downloaded above.
+
+The important indexing options to note here are `-impact -pretokenized`: the first tells Anserini not to encode BM25 doclengths into Lucene's norms (which is the default) and the second option says not to apply any additional tokenization on the uniCOIL tokens.
+Upon completion, we should have an index with 20,545,677 documents.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
@@ -47,3 +66,7 @@ ${eval_cmds}
 With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
+
+## Reproduction Log[*](reproducibility.md)
+
+To add to this reproduction log, modify [this template](${template}) and run `bin/build.sh` to rebuild the documentation.
