--- a/src/main/resources/docgen/templates/msmarco-v2-passage-unicoil-0shot.template
+++ b/src/main/resources/docgen/templates/msmarco-v2-passage-unicoil-0shot.template
@@ -12,12 +12,17 @@ Note that this page is automatically generated from [this template](${template})
 
 ## Corpus
 
-Download the corpus:
+Download, unpack, and prepare the corpus:
 
 ```
+# Download
 wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco_v2_passage_unicoil_0shot.tar -P collections/
 
+# Unpack
 tar -xvf collections/msmarco_v2_passage_unicoil_0shot.tar -C collections/
+
+# Rename (indexer is expecting corpus under a slightly different name)
+mv collections/msmarco_v2_passage_unicoil_0shot collections/msmarco-v2-passage-unicoil-0shot
 ```
 
 To confirm, `msmarco_v2_passage_unicoil_0shot.tar` is 41 GB and has an MD5 checksum of `1949a00bfd5e1f1a230a04bbc1f01539`.
