--- a/src/main/resources/docgen/templates/msmarco-passage-unicoil-tilde-expansion.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-unicoil-tilde-expansion.template
@@ -1,11 +1,9 @@
-# Anserini: Regressions for uniCOIL w/ TILDE on [MS MARCO Passage](https://github.com/microsoft/MSMARCO-Passage-Ranking)
+# Anserini: Regressions on MS MARCO Passage with uniCOIL+TILDE
 
-This page documents regression experiments for uniCOIL w/ TILDE document expansion on the MS MARCO Passage Ranking Task, which is integrated into Anserini's regression testing framework.
-The model is described in the following paper:
+This page describes regression experiments, integrated into Anserini's regression testing framework, with uniCOIL+TILDE on the [MS MARCO Passage Ranking Task](https://github.com/microsoft/MSMARCO-Passage-Ranking).
+The uniCOIL+TILDE model is described in the following paper:
 
 > Shengyao Zhuang and Guido Zuccon. [Fast Passage Re-ranking with Contextualized Exact Term Matching and Efficient Passage Expansion.](https://arxiv.org/pdf/2108.08513) _arXiv:2108.08513_.
-
-For more complete instructions on how to run end-to-end experiments, refer to [this page](experiments-msmarco-passage-unicoil-tilde-expansion.md).
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead.
@@ -42,7 +40,7 @@ Alternatively, you can simply copy/paste from the commands below and obtain the 
 
 ## Indexing
 
-Typical indexing command:
+Sample indexing command:
 
 ```
 ${index_cmds}
