--- a/src/main/resources/docgen/templates/msmarco-passage-unicoil-noexp.template
+++ b/src/main/resources/docgen/templates/msmarco-passage-unicoil-noexp.template
@@ -1,13 +1,12 @@
-# Anserini: Regressions on MS MARCO Document with uniCOIL
+# Anserini: Regressions on MS MARCO Passage with uniCOIL
 
-This page describes regression experiments, integrated into Anserini's regression testing framework, with uniCOIL (with doc2query-T5 expansions) on the [MS MARCO Document Ranking Task](https://github.com/microsoft/MSMARCO-Document-Ranking).
+This page describes regression experiments, integrated into Anserini's regression testing framework, with uniCOIL (without any expansions) on the [MS MARCO Passage Ranking Task](https://github.com/microsoft/MSMARCO-Passage-Ranking).
 The uniCOIL model is described in the following paper:
 
 > Jimmy Lin and Xueguang Ma. [A Few Brief Notes on DeepImpact, COIL, and a Conceptual Framework for Information Retrieval Techniques.](https://arxiv.org/abs/2106.14807) _arXiv:2106.14807_.
 
 The experiments on this page are not actually reported in the paper.
-However, the model is the same, applied to the MS MARCO _segmented_ document corpus (with doc2query-T5 expansions).
-Retrieval uses MaxP technique, where we select the score of the highest-scoring passage from a document as the score for that document to produce a document ranking.
+Here, a variant model without expansion is used.
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
 Note that this page is automatically generated from [this template](${template}) as part of Anserini's regression pipeline, so do not modify this page directly; modify the template instead and then run `bin/build.sh` to rebuild the documentation.
@@ -27,12 +26,12 @@ For details on how to train uniCOIL and perform inference, please see [this guid
 Download the corpus and unpack into `collections/`:
 
 ```
-wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco-doc-segmented-unicoil.tar -P collections/
+wget https://rgw.cs.uwaterloo.ca/JIMMYLIN-bucket0/data/msmarco-passage-unicoil.tar -P collections/
 
-tar xvf collections/msmarco-doc-segmented-unicoil.tar -C collections/
+tar xvf collections/msmarco-passage-unicoil.tar -C collections/
 ```
 
-To confirm, `msmarco-doc-segmented-unicoil.tar` is 18 GB and has MD5 checksum `6a00e2c0c375cb1e52c83ae5ac377ebb`.
+To confirm, `msmarco-passage-unicoil.tar` is 3.3 GB and has MD5 checksum `78eef752c78c8691f7d61600ceed306f`.
 
 With the corpus downloaded, the following command will perform the complete regression, end to end, on any machine:
 
@@ -51,10 +50,10 @@ Sample indexing command:
 ${index_cmds}
 ```
 
-The directory `/path/to/msmarco-doc-segmented-unicoil/` should point to the corpus downloaded above.
+The path `/path/to/${corpus}/` should point to the corpus downloaded above.
 
 The important indexing options to note here are `-impact -pretokenized`: the first tells Anserini not to encode BM25 doclengths into Lucene's norms (which is the default) and the second option says not to apply any additional tokenization on the uniCOIL tokens.
-Upon completion, we should have an index with 20,545,677 documents.
+Upon completion, we should have an index with 8,841,823 documents.
 
 For additional details, see explanation of [common indexing options](common-indexing-options.md).
 
@@ -81,36 +80,29 @@ With the above commands, you should be able to reproduce the following results:
 
 ${effectiveness}
 
-This model corresponds to the run named "uniCOIL-d2q" on the official MS MARCO Document Ranking Leaderboard, submitted 2021/09/16.
-The following command generates a comparable run:
-
-```
-target/appassembler/bin/SearchCollection \
-  -index indexes/lucene-index.msmarco-doc-segmented-unicoil/ \
-  -topics src/main/resources/topics-and-qrels/topics.msmarco-doc.dev.unicoil.tsv.gz \
-  -topicreader TsvInt \
-  -output runs/run.msmarco-doc-segmented-unicoil.msmarco-doc.dev.txt \
-  -format msmarco \
-  -impact -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 100
-```
-
-Note that the above command uses `-format msmarco` to directly generate a run in the MS MARCO output format.
-And to evaluate:
+The above runs are in TREC output format and evaluated with `trec_eval`.
+In order to reproduce results reported in the paper, we need to convert to MS MARCO output format and then evaluate:
 
 ```bash
-python tools/scripts/msmarco/msmarco_doc_eval.py \
-  --judgments src/main/resources/topics-and-qrels/qrels.msmarco-doc.dev.txt \
-  --run runs/run.msmarco-doc-segmented-unicoil.msmarco-doc.dev.txt
+python tools/scripts/msmarco/convert_trec_to_msmarco_run.py \
+   --input runs/run.msmarco-passage-unicoil.unicoil.topics.msmarco-passage.dev-subset.unicoil.txt \
+   --output runs/run.msmarco-passage-unicoil.unicoil.topics.msmarco-passage.dev-subset.unicoil.tsv --quiet
+
+python tools/scripts/msmarco/msmarco_passage_eval.py \
+   tools/topics-and-qrels/qrels.msmarco-passage.dev-subset.txt \
+   runs/run.msmarco-passage-unicoil.unicoil.topics.msmarco-passage.dev-subset.unicoil.tsv
 ```
 
 The results should be as follows:
 
 ```
 #####################
-MRR @100: 0.352997702662614
-QueriesRanked: 5193
+MRR @10: 0.35155222404147896
+QueriesRanked: 6980
 #####################
 ```
+
+This corresponds to the effectiveness reported in the paper and also the run named "uniCOIL-d2q" on the official MS MARCO Passage Ranking Leaderboard, submitted 2021/09/22.
 
 ## Reproduction Log[*](reproducibility.md)
 
