--- a/src/main/resources/regression/dl21-doc-segmented-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/dl21-doc-segmented-unicoil-noexp-0shot.yaml
@@ -60,7 +60,7 @@ topics:
 
 models:
   - name: unicoil-noexp-0shot
-    display: uniCOIL (no expansion, zero-shot)
+    display: uniCOIL (no expansions, zero-shot)
     params: -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000 -impact -pretokenized
     results:
       MAP@100:
