--- a/src/main/resources/regression/dl19-passage-unicoil.yaml
+++ b/src/main/resources/regression/dl19-passage-unicoil.yaml
@@ -53,7 +53,7 @@ topics:
 
 models:
   - name: unicoil
-    display: uniCOIL w/ doc2query-T5 expansion
+    display: uniCOIL (with doc2query-T5 expansions)
     params: -impact -pretokenized
     results:
       AP@1000:
