--- a/src/main/resources/regression/dl20-passage-unicoil-noexp.yaml
+++ b/src/main/resources/regression/dl20-passage-unicoil-noexp.yaml
@@ -53,7 +53,7 @@ topics:
 
 models:
   - name: unicoil
-    display: uniCOIL w/ doc2query-T5 expansion
+    display: uniCOIL (no expansions)
     params: -impact -pretokenized
     results:
       AP@1000:
