--- a/src/main/resources/regression/dl20-doc-segmented-unicoil-noexp.yaml
+++ b/src/main/resources/regression/dl20-doc-segmented-unicoil-noexp.yaml
@@ -1,8 +1,8 @@
 ---
-corpus: msmarco-doc-segmented-unicoil
-corpus_path: collections/msmarco/msmarco-doc-segmented-unicoil/
+corpus: msmarco-doc-segmented-unicoil-noexp
+corpus_path: collections/msmarco/msmarco-doc-segmented-unicoil-noexp/
 
-index_path: indexes/lucene-index.msmarco-doc-segmented-unicoil/
+index_path: indexes/lucene-index.msmarco-doc-segmented-unicoil-noexp/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
@@ -10,49 +10,57 @@ index_options: -impact -pretokenized
 index_stats:
   documents: 20545677
   documents (non-empty): 20545677
-  total terms: 214505277898
+  total terms: 152325913715
 
 metrics:
-  - metric: MAP
+  - metric: AP@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
-    params: -c -m map
+    params: -c -M 100 -m map # Note, this is different DL 2019 passage ranking!
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
+  - metric: nDCG@10
+    command: tools/eval/trec_eval.9.0.4/trec_eval
+    params: -c -m ndcg_cut.10
+    separator: "\t"
+    parse_index: 2
+    metric_precision: 4
+    can_combine: false
   - metric: R@100
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.100
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
   - metric: R@1000
     command: tools/eval/trec_eval.9.0.4/trec_eval
     params: -c -m recall.1000
     separator: "\t"
     parse_index: 2
     metric_precision: 4
-    can_combine: true
+    can_combine: false
 
 topic_reader: TsvInt
 topic_root: src/main/resources/topics-and-qrels/
 qrels_root: src/main/resources/topics-and-qrels/
 topics:
-  - name: "[MS MARCO Doc: Dev](https://github.com/microsoft/MSMARCO-Document-Ranking)"
-    id: dev
-    path: topics.msmarco-doc.dev.unicoil.tsv.gz
-    qrel: qrels.msmarco-doc.dev.txt
+  - name: "[DL20 (Doc)](https://trec.nist.gov/data/deep2020.html)"
+    id: dl20
+    path: topics.dl20.unicoil-noexp.0shot.tsv.gz
+    qrel: qrels.dl20-doc.txt
 
 models:
   - name: unicoil
-    display: uniCOIL (with doc2query-T5 expansions)
+    display: uniCOIL w/ doc2query-T5 expansion
     params: -impact -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
-      MAP:
-        - 0.3535
+      AP@100:
+        - 0.3586
+      nDCG@10:
+        - 0.5632
       R@100:
-        - 0.8858
+        - 0.5932
       R@1000:
-        - 0.9546
-
+        - 0.7562
