--- a/src/main/resources/regression/msmarco-passage-unicoil-noexp.yaml
+++ b/src/main/resources/regression/msmarco-passage-unicoil-noexp.yaml
@@ -1,8 +1,8 @@
 ---
-corpus: msmarco-passage-unicoil
-corpus_path: collections/msmarco/msmarco-passage-unicoil/
+corpus: msmarco-passage-unicoil-noexp
+corpus_path: collections/msmarco/msmarco-passage-unicoil-noexp/
 
-index_path: indexes/lucene-index.msmarco-passage-unicoil/
+index_path: indexes/lucene-index.msmarco-passage-unicoil-noexp/
 collection_class: JsonVectorCollection
 generator_class: DefaultLuceneDocumentGenerator
 index_threads: 16
@@ -10,7 +10,7 @@ index_options: -impact -pretokenized
 index_stats:
   documents: 8841823
   documents (non-empty): 8841823
-  total terms: 44495093768
+  total terms: 26468530021
 
 metrics:
   - metric: MAP
@@ -41,18 +41,18 @@ qrels_root: src/main/resources/topics-and-qrels/
 topics:
   - name: "[MS MARCO Passage: Dev](https://github.com/microsoft/MSMARCO-Passage-Ranking)"
     id: dev
-    path: topics.msmarco-passage.dev-subset.unicoil.tsv.gz
+    path: topics.msmarco-passage.dev-subset.unicoil-noexp.tsv.gz
     qrel: qrels.msmarco-passage.dev-subset.txt
 
 models:
   - name: unicoil
-    display: uniCOIL (with doc2query-T5 expansions)
+    display: uniCOIL (no expansions)
     params: -impact -pretokenized
     results:
       MAP:
-        - 0.3574
+        - 0.3215
       MRR:
-        - 0.3625
+        - 0.3263
       R@1000:
-        - 0.9582
+        - 0.9239
 
