--- a/src/main/resources/docgen/templates/car17v1.5.template
+++ b/src/main/resources/docgen/templates/car17v1.5.template
@@ -1,4 +1,6 @@
-# Anserini: Regressions for [CAR17](http://trec-car.cs.unh.edu/) (v1.5)
+# Anserini Regressions: CAR17 (v1.5)
+
+**Models**: various bag-of-words approaches
 
 This page documents regression experiments for the [TREC 2017 Complex Answer Retrieval (CAR)](http://trec-car.cs.unh.edu/) section-level passage retrieval task (v1.5).
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
