--- a/src/main/resources/docgen/templates/mb11.template
+++ b/src/main/resources/docgen/templates/mb11.template
@@ -1,4 +1,6 @@
-# Anserini: Regressions for Tweets2011 (MB11 &amp; MB12)
+# Anserini Regressions: Tweets2011 (MB11 &amp; MB12)
+
+**Models**: various bag-of-words approaches
 
 This page describes regressions for the Microblog Tracks from TREC 2011 and 2012 using the Tweets2011 collection.
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
