--- a/src/main/resources/docgen/templates/mb13.template
+++ b/src/main/resources/docgen/templates/mb13.template
@@ -1,4 +1,6 @@
-# Anserini: Regressions for Tweets2013 (MB13 &amp; MB14)
+# Anserini Regressions: Tweets2013 (MB13 &amp; MB14)
+
+**Models**: various bag-of-words approaches
 
 This page describes regressions for the Microblog Tracks from TREC 2013 and 2014 using the Tweets2013 collection.
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
