--- a/src/main/resources/docgen/templates/cw12b13.template
+++ b/src/main/resources/docgen/templates/cw12b13.template
@@ -1,4 +1,6 @@
-# Anserini: Regressions for [ClueWeb12-B13](http://lemurproject.org/clueweb12/ClueWeb12-CreateB13.php)
+# Anserini Regressions: ClueWeb12-B13
+
+**Models**: various bag-of-words approaches
 
 This page describes regressions for the Web Tracks from TREC 2013 and 2014 using the [ClueWeb12-B13 collection](http://lemurproject.org/clueweb12/ClueWeb12-CreateB13.php).
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
