--- a/src/main/resources/docgen/templates/msmarco-passage.template
+++ b/src/main/resources/docgen/templates/msmarco-passage.template
@@ -2,7 +2,7 @@
 
 **Models**: various bag-of-words approaches
 
-This page documents regression experiments for the MS MARCO Passage Retrieval Task, which is integrated into Anserini's regression testing framework.
+This page documents regression experiments on the [MS MARCO passage ranking task](https://github.com/microsoft/MSMARCO-Passage-Ranking), which is integrated into Anserini's regression testing framework.
 For more complete instructions on how to run end-to-end experiments, refer to [this page](experiments-msmarco-passage.md).
 
 The exact configurations for these regressions are stored in [this YAML file](${yaml}).
