--- a/src/main/resources/docgen/templates/dl21-passage-unicoil-0shot.template
+++ b/src/main/resources/docgen/templates/dl21-passage-unicoil-0shot.template
@@ -1,6 +1,6 @@
 # Anserini Regressions: TREC 2021 Deep Learning Track (Passage)
 
-**Model**: zero-shot uniCOIL (with doc2query-T5 expansions)
+**Model**: uniCOIL (with doc2query-T5 expansions) zero-shot
 
 This page describes baseline experiments, integrated into Anserini's regression testing framework, on the TREC 2021 Deep Learning Track passage ranking task using the MS MARCO V2 passage collection.
 Here, we cover experiments with the uniCOIL model trained on the MS MARCO V1 passage ranking test collection, applied in a zero-shot manner, with doc2query-T5 expansions.
