--- a/src/main/resources/regression/dl21-doc-segmented-unicoil-0shot.yaml
+++ b/src/main/resources/regression/dl21-doc-segmented-unicoil-0shot.yaml
@@ -60,7 +60,7 @@ topics:
 
 models:
   - name: unicoil-0shot
-    display: uniCOIL (zero-shot)
+    display: uniCOIL (with doc2query-T5) zero-shot
     params: -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000 -impact -pretokenized
     results:
       MAP@100:
