--- a/src/main/resources/regression/dl21-passage-unicoil-noexp-0shot.yaml
+++ b/src/main/resources/regression/dl21-passage-unicoil-noexp-0shot.yaml
@@ -60,7 +60,7 @@ topics:
 
 models:
   - name: unicoil-noexp-0shot
-    display: uniCOIL (no expansions, zero-shot)
+    display: uniCOIL (noexp) zero-shot
     params: -impact -pretokenized
     results:
       MAP@100:
