--- a/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot.yaml
+++ b/src/main/resources/regression/msmarco-v2-doc-segmented-unicoil-0shot.yaml
@@ -57,7 +57,7 @@ topics:
 
 models:
   - name: unicoil-0shot
-    display: uniCOIL (zero-shot)
+    display: uniCOIL (with doc2query-T5) zero-shot
     params: -impact -pretokenized -hits 10000 -selectMaxPassage -selectMaxPassage.delimiter "#" -selectMaxPassage.hits 1000
     results:
       MAP@100:
